--- a/Quest2/app/templates/index.html
+++ b/Quest2/app/templates/index.html
@@ -25,6 +25,17 @@
         <div class="content">
             <h1 class="purple">{{username}}</h1>
             <p>{{description}}</p>
+            <div class="projects">
+                {% for project in projects %}
+                {% if project.category == "Web Development" %}
+                    <div class="project">
+                        <h2>{{project.title}}</h2>
+                        <p>{{project.description}}</p>
+                        <p class="light">{{project.author}}</p>
+                    </div>
+                {% endfor %}
+                {% endfor %
+            </div>
         </div>
     </div>
 </body>
