--- a/Quest2/app/templates/index.html
+++ b/Quest2/app/templates/index.html
@@ -27,14 +27,14 @@
             <p>{{description}}</p>
             <div class="projects">
                 {% for project in projects %}
-                {% if project.category == "Web Development" %}
-                    <div class="project">
-                        <h2>{{project.title}}</h2>
-                        <p>{{project.description}}</p>
-                        <p class="light">{{project.author}}</p>
+                    {% if project.category == "Web Development" %}
+                        <div class="project">
+                            <h2>{{project.title}}</h2>
+                            <p>{{project.description}}</p>
+                            <p class="light">{{project.author}}</p>
                     </div>
+                     {% endif %}
                 {% endfor %}
-                {% endfor %
             </div>
         </div>
     </div>
