--- a/Quest3/app/templates/add.html
+++ b/Quest3/app/templates/add.html
@@ -26,23 +26,23 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="content flex column gap-10">
-            <h1 class="purple">{{shopname}} Admin</h1>
-            <a href="/product/add" class="aButton">Add Product</a>
-            <div class="products">
-                {% for product in products %}
-                    <div class="product">
-                        <h2>{{product.title}}</h2>
-                        <p>{{product.description}}</p>
-                        <p class="light">{{product.author}}</p>
-                        <div class="flex row justify-split align-center fill-width">
-                            <a href="/product/{{product.id}}" class="aButton">View</a>
-                            <a href="/product/delete/{{product.id}}" class="aButton warning">Delete</a>
-                        </div>
-                       
-                    </div>
-                {% endfor %}
+    <div class="container fill-height">
+        <div class="content">
+            <div class="box flex column">
+                <h1 class="purple">Product</h1>
+                <form action="/product/add" method="POST" enctype="multipart/form-data" class="flex column gap-10">
+                    <label for="title">Name</label>
+                    <input type="text" name="title" placeholder="Name">
+                    <label for="category">Category</label>
+                    <input type="text" name="category" placeholder="Category">
+                    <label for="description">Description</label>
+                    <input type="text" name="description" placeholder="Description">
+                    <label for="price">Price</label>
+                    <input type="text" name="price" placeholder="Price">
+                    <label for="image">Image</label>
+                    <input type="file" name="image" placeholder="Image">
+                    <button type="submit">Add</button>
+                </form>
             </div>
         </div>
     </div>
